--- a/OPNS_Demo_fe/src/app/components/home/home.component.html
+++ b/OPNS_Demo_fe/src/app/components/home/home.component.html
@@ -21,7 +21,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-lg-3 col-sm-12 pt-5">
+        <div class="col-lg-3 col-md-4 col-sm-12 pt-5">
             <div class="card cover text-bg-light shadow-lg">
                 <img src="../../../assets/img/cover/volume1.jpg" class="card-img-top" alt="vol1">
                 <div class="card-body">
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-8 offset-lg-1 col-sm-12 pt-5">
+        <div class="col-lg-8 offset-lg-1 col-md-7 offset-md-1 col-sm-12 pt-5">
             <p>One Piece (ONE PIECE - ワンピース Wan Pīsu) è un manga scritto e disegnato da Eiichirō Oda, serializzato sulla
                 rivista Weekly Shōnen Jump di Shūeisha dal 22 luglio 1997. La casa editrice ne raccoglie periodicamente
                 i capitoli in volumi formato tankōbon, di cui il primo è stato pubblicato il 24 dicembre. L'edizione
