--- a/OPNS_Demo_fe/src/app/components/nav/nav.component.html
+++ b/OPNS_Demo_fe/src/app/components/nav/nav.component.html
@@ -3,11 +3,11 @@
 <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-primary" aria-label="Fourth navbar example">
   <div class="container-fluid">
     <img class="navbar-brand" src="../../../assets/img/Luffys-jolly.png" alt="OPNS">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04"
-      aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
+      aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarsExample04">
+    <div class="collapse navbar-collapse" id="navbar">
       <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
           <a class="nav-link" aria-current="page" [routerLink]="['/']" routerLinkActive="active"
@@ -49,16 +49,19 @@
   </div>
   <div class="offcanvas-body">
     <div>
+      <h2 class="my-4">Benvenuto su OPNS</h2>
       <p>Ti è mai capitato di dimenticare un dettaglio di un opera che magari segui da
         tanti anni? Allora sei andato su internet per cercarlo e ti sei trovato davanti a un
-        terribile spoiler.</p>
-      <p>Che tu sia un fan di vecchia data o un neofita, One Piece è un opera molto lunga e può capitare di perdersi
+        terribile <strong>SPOILER</strong>.</p>
+      <p>Che tu sia un fan di vecchia data o un neofita, <strong>ONE PIECE</strong> è un opera molto lunga e può capitare di perdersi
         qualche dettaglio col passare degli anni, ma cercando sul web è molto facile imbatterti in qualcosa che non
         dovresti ancora sapere.</p>
       <p>Con noi non dovrai più preoccuparti che questo succeda!!</p>
-      <p>Registrati dicendoci qual è l’ultimo volume che hai letto, il sito si occuperà
+      <p><strong>Registrati dicendoci qual è l’ultimo volume che hai letto</strong>, il sito si occuperà
         di filtrare tutto il contenuto del nostro database in modo da mostrarti solo quello
         che devi sapere.</p>
+      <p>Potrai aggiornarlo in qualsiasi momento andando in <strong>ACCOUNT</strong> -> <strong>AGGIORNA VOLUME</strong></p>
+      <p>La sezione <strong>VOLUMI</strong> non sarà accessibile prima di aver effettuato il <strong>LOGIN</strong></p>  
       <p>Che stai aspettando? Unisciti a noi per questa grande avventura!!</p>
       <p>Non avere paura degli spoiler, qui non ne troverai!!</p>
     </div>
