--- a/OPNS_Demo_fe/src/app/components/footer/footer.component.html
+++ b/OPNS_Demo_fe/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container pt-5">
   <footer class="py-3 my-4 border-top">
     <div>
-      <p class="text-muted">© 2022 One Piece NO SPOILER, puoi acquistare i volumi di One Piece dal rivenditore ufficiale italiano <a href="https://www.starcomics.com/titoli-fumetti/one-piece-new-edition" target="_blank">Star Comics</a>. </p>
+      <p class="text-muted">© <span>{{year}}</span> One Piece NO SPOILER, puoi acquistare i volumi di One Piece dal rivenditore ufficiale italiano <a href="https://www.starcomics.com/titoli-fumetti/one-piece-new-edition" target="_blank">Star Comics</a>. </p>
     </div>
   </footer>
 </div>
