--- a/OPNS_Demo_fe/src/app/components/volumi/volumi.component.scss
+++ b/OPNS_Demo_fe/src/app/components/volumi/volumi.component.scss
@@ -1,10 +1,22 @@
 @import '../home/home.component.scss';
 
-.cover-modal{
-   height: 35rem;
-   width: 25rem;
+.cover-offcanvas{
+   height: 32rem;
+   width: 22rem;
 }
 
 .loading{
    height: 500px;
+}
+
+@media screen and (max-width: 1200px){
+   .cover-img{
+      height: 20rem;
+   }
+}
+
+@media screen and (min-width: 1200px){
+   .cover-img{
+      height: 25rem;
+   }
 }
