--- a/OPNS_Demo_fe/src/app/components/home/home.component.html
+++ b/OPNS_Demo_fe/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
     </div>
     <div class="container">
         <div class="row pb-5">
-            <div class="col text-black">Ricchezza, fama e potere ti aspettano!!</div>
+            <div class="col text-white">Ricchezza, fama e potere ti aspettano!!</div>
         </div>
     </div>
 </div>
