--- a/OPNS_Demo_fe/src/app/components/volumi/volumi.component.scss
+++ b/OPNS_Demo_fe/src/app/components/volumi/volumi.component.scss
@@ -5,8 +5,13 @@
    width: 22rem;
 }
 
-.loading{
+.div-loading{
    height: 500px;
+}
+
+.loading{
+   height: 5rem;
+   width: 5rem;
 }
 
 @media screen and (max-width: 1200px){
