--- a/OPNS_Demo_fe/src/app/components/nav/nav.component.scss
+++ b/OPNS_Demo_fe/src/app/components/nav/nav.component.scss
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: 'roboto-medium-italic';
+    src: url(../../../assets/fonts/Roboto-MediumItalic.ttf);
+}
+
+*{
+    font-family: 'roboto-medium-italic';
+}
+
 img{
     width: 50px;
     height: 58px;
