--- a/OPNS_Demo_fe/src/app/components/home/home.component.html
+++ b/OPNS_Demo_fe/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="container">
         <h2 class="py-5 text-white">Benvenuto su OPNS</h2>
-        <p class="text-white">la prima wiki italiana su ONE PIECE che ti protegge da qualsiasi tipo di SPOILER!!
+        <p class="text-white">la prima collection italiana sui volumi di ONE PIECE che ti protegge da qualsiasi tipo di SPOILER!!
             Al fine di garantire il nostro servizio ti chiediamo una semplice registrazione per
             farci sapere a che punto della storia ti trovi. In questo modo saremo in grado di
             nascondere tutto il contenuto "pericoloso".
