--- a/OPNS_Demo_fe/src/app/components/nav/nav.component.html
+++ b/OPNS_Demo_fe/src/app/components/nav/nav.component.html
@@ -42,7 +42,7 @@
 
 <!-- Info Offcanvas -->
 
-<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasInfo" aria-labelledby="offcanvasInfoLabel">
+<div class="offcanvas offcanvas-start offcanvas-modal" tabindex="-1" id="offcanvasInfo" aria-labelledby="offcanvasInfoLabel">
   <div class="offcanvas-header bg bg-primary">
     <h5 class="offcanvas-title text-white" id="offcanvasInfoLabel">Info</h5>
     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -70,7 +70,7 @@
 
 <!-- Register Modal -->
 
-<div class="modal fade" id="registerModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="registerModalLabel"
+<div class="modal fade offcanvas-modal" id="registerModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="registerModalLabel"
   aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -134,7 +134,7 @@
 
 <!-- Login Modal -->
 
-<div class="modal fade" id="loginModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="loginModalLabel"
+<div class="modal fade offcanvas-modal" id="loginModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="loginModalLabel"
   aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -174,7 +174,7 @@
 
 <!-- Patch Modal -->
 
-<div class="modal fade" id="patchModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="patchModalLabel"
+<div class="modal fade offcanvas-modal" id="patchModal" data-bs-backdrop="static" tabindex="-1" aria-labelledby="patchModalLabel"
   aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
