--- a/OPNS_Demo_fe/src/app/components/volumi/volumi.component.html
+++ b/OPNS_Demo_fe/src/app/components/volumi/volumi.component.html
@@ -51,7 +51,7 @@
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        <h2 class="my-4">{{schedaDetails.titolo}}</h2>
+        <h2 class="my-4"><strong>{{schedaDetails.titolo}}</strong></h2>
         <img class="cover-offcanvas" src="../../../assets/img/cover/{{schedaDetails.imgUrl}}" alt="cover">
         <p class=" text-start mt-5 mx-3">{{schedaDetails.testo}}</p>
     </div>
