--- a/OPNS_Demo_fe/src/app/components/nav/nav.component.scss
+++ b/OPNS_Demo_fe/src/app/components/nav/nav.component.scss
@@ -3,8 +3,17 @@
     src: url(../../../assets/fonts/Roboto-MediumItalic.ttf);
 }
 
-*{
+@font-face {
+    font-family: 'roboto';
+    src: url(../../../assets/fonts/Roboto-Regular.ttf);
+}
+
+.navbar{
     font-family: 'roboto-medium-italic';
+}
+
+.offcanvas-modal{
+    font-family: 'roboto';
 }
 
 img{
